Bug 477360 - Plasma applet does not round and show unit for total resource
Summary: Plasma applet does not round and show unit for total resource
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.27.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-22 11:13 UTC by Méven Car
Modified: 2023-12-20 09:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
systemmontor applet with bad Legend (17.43 KB, image/png)
2023-11-22 11:14 UTC, Méven Car
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Méven Car 2023-11-22 11:13:26 UTC
Plasma applet does not round neither displays unit in legend for at least "Total CPU", "Total GPU", "Average CPU temp" and "Total RAM usage".

This seems to be computed in libksysguard.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 23.10
KDE Plasma Version: 5.81.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-13-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Comment 1 Méven Car 2023-11-22 11:14:37 UTC
Created attachment 163355 [details]
systemmontor applet with bad Legend
Comment 2 Bug Janitor Service 2023-12-01 15:25:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/313
Comment 3 Arjen Hiemstra 2023-12-18 11:49:35 UTC
Git commit 0047eb969a277d3f3a2a807592be9fe66eafa417 by Arjen Hiemstra.
Committed on 18/12/2023 at 12:46.
Pushed by ahiemstra into branch 'master'.

systemstats: Version DBus service/object/interface properly

In certain cases we may end up with mismatches if a newer client tries
to connect to an older ksystemstats or vice-versa. This may cause odd
issues like mismatching units. To avoid this, add a version number to
the appropriate DBus bits. This ensures we can change the version if
there are incompatible changes.

M  +4    -4    systemstats/CMakeLists.txt
M  +1    -1    systemstats/DBusInterface.cpp
M  +5    -4    systemstats/DBusInterface.h
R  +1    -1    systemstats/org.kde.ksystemstats1.xml [from: systemstats/org.kde.ksystemstats.xml - 097% similarity]

https://invent.kde.org/plasma/libksysguard/-/commit/0047eb969a277d3f3a2a807592be9fe66eafa417
Comment 4 Arjen Hiemstra 2023-12-20 09:19:28 UTC
Git commit af3f594771d502566f3b80c0d678078722a0a104 by Arjen Hiemstra.
Committed on 20/12/2023 at 10:16.
Pushed by ahiemstra into branch 'master'.

Update DBus bits to make use of versioned service/object/interface

M  +2    -2    autotests/main.cpp
M  +1    -1    src/plasma-ksystemstats.service.in
M  +2    -2    tools/kstatsviewer/main.cpp

https://invent.kde.org/plasma/ksystemstats/-/commit/af3f594771d502566f3b80c0d678078722a0a104