Update DBus bits to make use of versioned service/object/interface

BUG: 477360